<resources>
    <string name="app_name">RecipeAppMidterm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello,</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_in_with">Or Sign In With</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="lets_help_you_set_up_your_account_it_wont_take_long">Lets help you set up your account, it wont take long</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="accept_terms_amp_conditions"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="already_a_member">Already a member?</string>
    <string name="web_client_id">1003413666996-2s3tocfrg6eldk64s3pjco9jae1nk7at.apps.googleusercontent.com</string>
</resources>